--- a/bitrix/templates/main/5-1ob.html
+++ b/bitrix/templates/main/5-1ob.html
@@ -282,7 +282,64 @@
                     </aside>
                     <div class="aside-content">
                       <div class="contact-content">
-                        <div class="content-wrapper" data-id="#content"></div>
+                        <div class="content-wrapper" data-id="#content">
+                          <div class="col-wrapper">
+                            <div class="col-50">
+                                                        <div class="vrach-wrap">
+                                                          <div class="vrach-inner">
+                                                            <div class="vrach-vrach">
+                                                              <div class="vrach-vrach-inner"><img class="js-image" data-src="img/doctor/1.png" alt="undefined">
+                                                                <div class="vrach-vrach-name">
+                                                                  <div class="tel-item"><a class="tel-item-tel" href="tel:84959566095">8 (495) 956-60-95</a></div>
+                                                                  <div class="tel-item"><a class="tel-item-tel" href="tel:84959566095">8 (495) 956-60-95</a></div><a class="link" href="mailto: koriod.olga@gmail.com">koriod.olga@gmail.com</a>
+                                                                </div>
+                                                              </div>
+                                                            </div>
+                                                            <div class="vrach-inner-block">
+                                                              <div class="vrach-inner-title">Короид Ольга Анатольевна</div>
+                                                              <div class="text-sm"> Главный врач</div>
+                                                            </div>
+                                                          </div>
+                                                        </div>
+                            </div>
+                            <div class="col-50">
+                                                        <div class="vrach-wrap">
+                                                          <div class="vrach-inner">
+                                                            <div class="vrach-vrach">
+                                                              <div class="vrach-vrach-inner"><img class="js-image" data-src="img/doctor/2.png" alt="undefined">
+                                                                <div class="vrach-vrach-name">
+                                                                  <div class="tel-item"><a class="tel-item-tel" href="tel:84959566095">8 (495) 956-60-95</a></div>
+                                                                  <div class="tel-item"><a class="tel-item-tel" href="tel:84959566095">8 (495) 956-60-95</a></div><a class="link" href="mailto: koriod.olga@gmail.com">koriod.olga@gmail.com</a>
+                                                                </div>
+                                                              </div>
+                                                            </div>
+                                                            <div class="vrach-inner-block">
+                                                              <div class="vrach-inner-title">Короид Ольга Анатольевна</div>
+                                                              <div class="text-sm"> Заведующая отделением физиотерапии</div>
+                                                            </div>
+                                                          </div>
+                                                        </div>
+                            </div>
+                            <div class="col-50">
+                                                        <div class="vrach-wrap">
+                                                          <div class="vrach-inner">
+                                                            <div class="vrach-vrach">
+                                                              <div class="vrach-vrach-inner"><img class="js-image" data-src="img/doctor/3.png" alt="undefined">
+                                                                <div class="vrach-vrach-name">
+                                                                  <div class="tel-item"><a class="tel-item-tel" href="tel:84959566095">8 (495) 956-60-95</a></div>
+                                                                  <div class="tel-item"><a class="tel-item-tel" href="tel:84959566095">8 (495) 956-60-95</a></div><a class="link" href="mailto: koriod.olga@gmail.com">koriod.olga@gmail.com</a>
+                                                                </div>
+                                                              </div>
+                                                            </div>
+                                                            <div class="vrach-inner-block">
+                                                              <div class="vrach-inner-title">Короид Ольга Анатольевна</div>
+                                                              <div class="text-sm"> Главный врач</div>
+                                                            </div>
+                                                          </div>
+                                                        </div>
+                            </div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
