--- a/bitrix/templates/main/5-2ob.html
+++ b/bitrix/templates/main/5-2ob.html
@@ -282,7 +282,77 @@
                     </aside>
                     <div class="aside-content">
                       <div class="contact-content">
-                        <div class="content-wrapper" data-id="#content"></div>
+                        <div class="content-wrapper" data-id="#content">
+                          <h3>Генеральные партнеры</h3>
+                          <div class="col-wrapper partner">
+                            <div class="col-50">
+                                                        <div class="partner-block"><a class="partner-block-inner" href="#">
+                                                            <div class="partner-block-img"><img class="js-image" data-src="img/partner/1.png" alt="5345"></div>
+                                                            <div class="partner-block-content">
+                                                              <div class="title h3">MEDCИ</div>
+                                                              <div class="link partner-block-link"><span>www.mybex.ru</span></div>
+                                                              <div class="text">Медицинский Центр сейчас обладает весьма высоким потенциалом. Но подтверждением правильности  выбранной нами стратегии должен быть конкретный результат.</div>
+                                                            </div></a></div>
+                            </div>
+                            <div class="col-50">
+                                                        <div class="partner-block"><a class="partner-block-inner" href="#">
+                                                            <div class="partner-block-img"><img class="js-image" data-src="img/partner/2.png" alt="5345"></div>
+                                                            <div class="partner-block-content">
+                                                              <div class="title h3">Семейный доктор</div>
+                                                              <div class="link partner-block-link"><span>www.fdoctor.ru</span></div>
+                                                              <div class="text">Медицинский Центр сейчас обладает весьма высоким потенциалом. Но подтверждением правильности  выбранной нами стратегии должен быть конкретный результат.</div>
+                                                            </div></a></div>
+                            </div>
+                            <div class="col-50">
+                                                        <div class="partner-block"><a class="partner-block-inner" href="#">
+                                                            <div class="partner-block-img"><img class="js-image" data-src="img/partner/3.png" alt="5345"></div>
+                                                            <div class="partner-block-content">
+                                                              <div class="title h3">MIADENT</div>
+                                                              <div class="link partner-block-link"><span>www.mia-dent.ru</span></div>
+                                                              <div class="text">Медицинский Центр сейчас обладает весьма высоким потенциалом. Но подтверждением правильности  выбранной нами стратегии должен быть конкретный результат.</div>
+                                                            </div></a></div>
+                            </div>
+                            <div class="col-50">
+                                                        <div class="partner-block"><a class="partner-block-inner" href="#">
+                                                            <div class="partner-block-img"><img class="js-image" data-src="img/partner/2.png" alt="5345"></div>
+                                                            <div class="partner-block-content">
+                                                              <div class="title h3">Семейный доктор</div>
+                                                              <div class="link partner-block-link"><span>www.fdoctor.ru</span></div>
+                                                              <div class="text">Медицинский Центр сейчас обладает весьма высоким потенциалом. Но подтверждением правильности  выбранной нами стратегии должен быть конкретный результат.</div>
+                                                            </div></a></div>
+                            </div>
+                            <div class="col-50">
+                                                        <div class="partner-block"><a class="partner-block-inner" href="#">
+                                                            <div class="partner-block-img"><img class="js-image" data-src="img/partner/1.png" alt="5345"></div>
+                                                            <div class="partner-block-content">
+                                                              <div class="title h3">Nikemed</div>
+                                                              <div class="link partner-block-link"><span>www.nikemed.ru</span></div>
+                                                              <div class="text">Медицинский Центр сейчас обладает весьма высоким потенциалом. Но подтверждением правильности  выбранной нами стратегии должен быть конкретный результат.</div>
+                                                            </div></a></div>
+                            </div>
+                            <div class="col-50">
+                                                        <div class="partner-block"><a class="partner-block-inner" href="#">
+                                                            <div class="partner-block-img"><img class="js-image" data-src="img/partner/4.png" alt="5345"></div>
+                                                            <div class="partner-block-content">
+                                                              <div class="title h3">fijie</div>
+                                                              <div class="link partner-block-link"><span>www.nikemed.ru</span></div>
+                                                              <div class="text">Медицинский Центр сейчас обладает весьма высоким потенциалом. Но подтверждением правильности  выбранной нами стратегии должен быть конкретный результат.</div>
+                                                            </div></a></div>
+                            </div>
+                          </div>
+                          <h3>Страховые компании</h3>
+                          <div class="col-wrapper partner">
+                            <div class="col-50">
+                                                        <div class="partner-block"><a class="partner-block-inner" href="#">
+                                                            <div class="partner-block-img"><img class="js-image" data-src="img/partner/4.png" alt="5345"></div>
+                                                            <div class="partner-block-content">
+                                                              <div class="title h3">Ингосстрах</div>
+                                                              <div class="link partner-block-link"><span>www.ingos.ru</span></div>
+                                                              <div class="text">Медицинский Центр сейчас обладает весьма высоким потенциалом. Но подтверждением правильности  выбранной нами стратегии должен быть конкретный результат.</div>
+                                                            </div></a></div>
+                            </div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
