--- a/bitrix/templates/main/5-3ob.html
+++ b/bitrix/templates/main/5-3ob.html
@@ -281,8 +281,107 @@
                       </div>
                     </aside>
                     <div class="aside-content">
-                      <div class="contact-content">
-                        <div class="content-wrapper" data-id="#content"></div>
+                      <div class="content-column-wrap content-wrapper">
+                        <div class="content-column-content">
+                          <div class="vacancy-wrapper offerlist-section caption">
+                                                    <div class="vacancy-head js-accordion-trigger">
+                                                      <div class="vacancy-head-inner table-item dropdown">
+                                                        <div class="title h4">Медицинская сестра общего профиля</div>
+                                                      </div>
+                                                      <div class="vacancy-body js-accordion-body">
+                                                        <p>Медицинский Центр сейчас обладает весьма высоким потенциалом. Но подтверждением правильности  выбранной нами стратегии должен быть конкретный результат.</p><b>Требования:</b>
+                                                        <ul>
+                                                          <li>Высшее медицинское образование, диплом, действующий сертификат</li>
+                                                          <li>Опыт работы по специальности от 2 лет</li>
+                                                          <li>Навыки общения с клиентами</li>
+                                                          <li>Умение перенаправлять пациентов к другим специалистам</li>
+                                                          <li>Уверенный пользователь ПК</li>
+                                                        </ul><b>Условия:</b>
+                                                        <ul>
+                                                          <li>Официальное оформление согласно ТК РФ</li>
+                                                          <li>График работы - 6/1 утро/вечер</li>
+                                                          <li>На территории работодателя</li>
+                                                          <li>Заработная плата обсуждается на собеседовании</li>
+                                                          <li>Сменный график работы</li>
+                                                        </ul>
+                                                      </div>
+                                                    </div>
+                                                    <div class="vacancy-head js-accordion-trigger">
+                                                      <div class="vacancy-head-inner table-item dropdown">
+                                                        <div class="title h4">Медицинская сестра хирургического/эндоскопического профиля</div>
+                                                      </div>
+                                                      <div class="vacancy-body js-accordion-body">
+                                                        <p>Медицинский Центр сейчас обладает весьма высоким потенциалом. Но подтверждением правильности  выбранной нами стратегии должен быть конкретный результат.</p><b>Требования:</b>
+                                                        <ul>
+                                                          <li>Высшее медицинское образование, диплом, действующий сертификат</li>
+                                                          <li>Опыт работы по специальности от 2 лет</li>
+                                                          <li>Навыки общения с клиентами</li>
+                                                          <li>Умение перенаправлять пациентов к другим специалистам</li>
+                                                          <li>Уверенный пользователь ПК</li>
+                                                        </ul><b>Условия:</b>
+                                                        <ul>
+                                                          <li>Официальное оформление согласно ТК РФ</li>
+                                                          <li>График работы - 6/1 утро/вечер</li>
+                                                          <li>На территории работодателя</li>
+                                                          <li>Заработная плата обсуждается на собеседовании</li>
+                                                          <li>Сменный график работы</li>
+                                                        </ul>
+                                                      </div>
+                                                    </div>
+                                                    <div class="vacancy-head js-accordion-trigger">
+                                                      <div class="vacancy-head-inner table-item dropdown">
+                                                        <div class="title h4">Медицинская сестра общего профиля</div>
+                                                      </div>
+                                                      <div class="vacancy-body js-accordion-body">
+                                                        <p>Медицинский Центр сейчас обладает весьма высоким потенциалом. Но подтверждением правильности  выбранной нами стратегии должен быть конкретный результат.</p><b>Требования:</b>
+                                                        <ul>
+                                                          <li>Высшее медицинское образование, диплом, действующий сертификат</li>
+                                                          <li>Опыт работы по специальности от 2 лет</li>
+                                                          <li>Навыки общения с клиентами</li>
+                                                          <li>Умение перенаправлять пациентов к другим специалистам</li>
+                                                          <li>Уверенный пользователь ПК</li>
+                                                        </ul><b>Условия:</b>
+                                                        <ul>
+                                                          <li>Официальное оформление согласно ТК РФ</li>
+                                                          <li>График работы - 6/1 утро/вечер</li>
+                                                          <li>На территории работодателя</li>
+                                                          <li>Заработная плата обсуждается на собеседовании</li>
+                                                          <li>Сменный график работы</li>
+                                                        </ul>
+                                                      </div>
+                                                    </div>
+                                                    <div class="vacancy-head js-accordion-trigger">
+                                                      <div class="vacancy-head-inner table-item dropdown">
+                                                        <div class="title h4">Медицинская сестра общего профиля</div>
+                                                      </div>
+                                                      <div class="vacancy-body js-accordion-body">
+                                                        <p>Медицинский Центр сейчас обладает весьма высоким потенциалом. Но подтверждением правильности  выбранной нами стратегии должен быть конкретный результат.</p><b>Требования:</b>
+                                                        <ul>
+                                                          <li>Высшее медицинское образование, диплом, действующий сертификат</li>
+                                                          <li>Опыт работы по специальности от 2 лет</li>
+                                                          <li>Навыки общения с клиентами</li>
+                                                          <li>Умение перенаправлять пациентов к другим специалистам</li>
+                                                          <li>Уверенный пользователь ПК</li>
+                                                        </ul><b>Условия:</b>
+                                                        <ul>
+                                                          <li>Официальное оформление согласно ТК РФ</li>
+                                                          <li>График работы - 6/1 утро/вечер</li>
+                                                          <li>На территории работодателя</li>
+                                                          <li>Заработная плата обсуждается на собеседовании</li>
+                                                          <li>Сменный график работы</li>
+                                                        </ul>
+                                                      </div>
+                                                    </div>
+                          </div>
+                        </div>
+                        <!--div нужен-->
+                        <div class="content-column-right">
+                          <div class="caption-content bg-secondary">
+                            <div class="text">По вопросам трудоустройства звоните по телефону:</div>
+                            <div class="tel-item"><a class="tel-item-tel" href="#">+7 (495) 212-06-64</a></div>
+                            <div class="text">E-mail для резюме:</div><a class="link" href="#">kirillina@institut-krasoty.ru				</a>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
