--- a/bitrix/templates/main/5-4ob.html
+++ b/bitrix/templates/main/5-4ob.html
@@ -282,7 +282,69 @@
                     </aside>
                     <div class="aside-content">
                       <div class="contact-content">
-                        <div class="content-wrapper" data-id="#content"></div>
+                        <div class="content-wrapper" data-id="#content">
+                          <h3>Свидетельства</h3>
+                          <div class="col-wrapper partner">
+                            <div class="col-33">
+                                                        <div class="news-item"><a class="news-item-inner js-popup-button ajax-trigger" href="#" data-modal="diplom" data-href="/diplom1.html" data-slideto="0">
+                                                            <div class="news-item-image">
+                                                              <div class="news-item-image-inner"><img class="js-image" data-src="img/big.png" alt="undefined"></div>
+                                                            </div>
+                                                            <div class="news-item-content">
+                                                              <div class="news-item-content-inner">
+                                                                <div class="text">Свидетельство о внесении записи в Единый государственный реестр юридических лиц</div>
+                                                              </div>
+                                                            </div></a></div>
+                            </div>
+                          </div>
+                          <h3>Лицензии</h3>
+                          <div class="col-wrapper partner">
+                            <div class="col-33">
+                                                        <div class="news-item"><a class="news-item-inner js-popup-button ajax-trigger" href="#" data-modal="diplom" data-href="/diplom2.html" data-slideto="0">
+                                                            <div class="news-item-image">
+                                                              <div class="news-item-image-inner"><img class="js-image" data-src="img/big.png" alt="undefined"></div>
+                                                            </div>
+                                                            <div class="news-item-content">
+                                                              <div class="news-item-content-inner">
+                                                                <div class="text">Свидетельство о внесении записи в Единый государственный реестр юридических лиц</div>
+                                                              </div>
+                                                            </div></a></div>
+                            </div>
+                            <div class="col-33">
+                                                        <div class="news-item"><a class="news-item-inner js-popup-button ajax-trigger" href="#" data-modal="diplom" data-href="/diplom2.html" data-slideto="1">
+                                                            <div class="news-item-image">
+                                                              <div class="news-item-image-inner"><img class="js-image" data-src="img/big.png" alt="undefined"></div>
+                                                            </div>
+                                                            <div class="news-item-content">
+                                                              <div class="news-item-content-inner">
+                                                                <div class="text">Лицензия на предоставление медицинских услуг</div>
+                                                              </div>
+                                                            </div></a></div>
+                            </div>
+                            <div class="col-33">
+                                                        <div class="news-item"><a class="news-item-inner js-popup-button ajax-trigger" href="#" data-modal="diplom" data-href="/diplom2.html" data-slideto="2">
+                                                            <div class="news-item-image">
+                                                              <div class="news-item-image-inner"><img class="js-image" data-src="img/big.png" alt="undefined"></div>
+                                                            </div>
+                                                            <div class="news-item-content">
+                                                              <div class="news-item-content-inner">
+                                                                <div class="text">Лицензия на предоставление медицинских услуг</div>
+                                                              </div>
+                                                            </div></a></div>
+                            </div>
+                            <div class="col-33">
+                                                        <div class="news-item"><a class="news-item-inner js-popup-button ajax-trigger" href="#" data-modal="diplom" data-href="/diplom2.html" data-slideto="3">
+                                                            <div class="news-item-image">
+                                                              <div class="news-item-image-inner"><img class="js-image" data-src="img/big.png" alt="undefined"></div>
+                                                            </div>
+                                                            <div class="news-item-content">
+                                                              <div class="news-item-content-inner">
+                                                                <div class="text">Свидетельство о внесении записи в Единый государственный реестр юридических лиц</div>
+                                                              </div>
+                                                            </div></a></div>
+                            </div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
