--- a/src/pug/5-4ob.pug
+++ b/src/pug/5-4ob.pug
@@ -48,11 +48,38 @@ block content
 					.aside-content
 						.contact-content
 							.content-wrapper(data-id='#content')
-								
-				
-
-
-
+								h3 Свидетельства
+								mixin news1(img,text)
+									.news-item
+										a(href="#").news-item-inner.js-popup-button(data-modal='diplom', data-href='/diplom1.html', data-slideto='0').ajax-trigger
+											.news-item-image
+												.news-item-image-inner
+													img(data-src="img/"+img+".png", alt=""+title+"").js-image
+											.news-item-content
+												.news-item-content-inner
+													.text #{text}
+								.col-wrapper.partner
+									.col-33
+										+news1('big','Свидетельство о внесении записи в Единый государственный реестр юридических лиц')
+								h3 Лицензии
+								mixin news2(img,text,i)
+									.news-item
+										a(href="#").news-item-inner.js-popup-button(data-modal='diplom', data-href='/diplom2.html', data-slideto=''+i+'').ajax-trigger
+											.news-item-image
+												.news-item-image-inner
+													img(data-src="img/"+img+".png", alt=""+title+"").js-image
+											.news-item-content
+												.news-item-content-inner
+													.text #{text}
+								.col-wrapper.partner
+									.col-33
+										+news2('big','Свидетельство о внесении записи в Единый государственный реестр юридических лиц',0)
+									.col-33
+										+news2('big','Лицензия на предоставление медицинских услуг',1)
+									.col-33
+										+news2('big','Лицензия на предоставление медицинских услуг',2)
+									.col-33
+										+news2('big','Свидетельство о внесении записи в Единый государственный реестр юридических лиц',3)
 		//- .box
 		//- 	a(href="#").btn
 		//- 		span Подробнее о клинике
